force-app/main/default/objects/COWO_First_HierarchyManage__mdt/COWO_First_HierarchyManage__mdt.object-meta.xml
<CustomObject>
    <label>第一階層管理</label>
</CustomObject>