force-app/main/default/objects/COWO_First_HierarchyManage__mdt/fields/COWO_FirstHierarchyText__c.field-meta.xml
<CustomField>
    <fullName>COWO_FirstHierarchyText__c</fullName>
    <label>第一階層テキスト</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>