force-app/main/default/objects/COWO_First_HierarchyManage__mdt/fields/COWO_PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>COWO_PriceBook_Name__c</fullName>
    <label>価格表名前</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>