force-app/main/default/objects/COWO_First_HierarchyManage__mdt/fields/COWO_SecondHierarchyText__c.field-meta.xml
<CustomField>
    <fullName>COWO_SecondHierarchyText__c</fullName>
    <label>第二階層テキスト</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>